2009-10-23  Eric Seidel  <eric@webkit.org>

        No review, only adding Alice to the list of reviewers.

        * Scripts/modules/committers.py:

2009-10-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Eric Carlson.

        fast/media/mq-transform-02.html failed on Leopard Commit Bot
        https://bugs.webkit.org/show_bug.cgi?id=30700

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues): Update QuickTime version check.

2009-10-23  Kevin Ollivier  <kevino@theolliviers.com>

        wxMac 10.4 build fix, needs to link against WebKitSystemInterfaceTiger to get 
        character measurement APIs that are private on Tiger.

        * wx/build/settings.py:

2009-10-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (build fix).
        Build fix following bug #30696.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::evaluateScriptInIsolatedWorld):

2009-10-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig & Geoff Garen.

        https://bugs.webkit.org/show_bug.cgi?id=30696
        Enable isolated-worlds tests on mac.

        Add private interface for DRT to invoke execution in a given world.

        * DumpRenderTree/LayoutTestController.cpp:
        (evaluateScriptInIsolatedWorldCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::evaluateScriptInIsolatedWorld):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::evaluateScriptInIsolatedWorld):

2009-10-21  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool's "patch failed to download an apply" error should give more information
        https://bugs.webkit.org/show_bug.cgi?id=30632

        * Scripts/modules/scm.py: