@@ -1,3 +1,12 @@
+2009-10-26  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Holger Freyther.
+
+        Reviewers are missing from committers.py
+        https://bugs.webkit.org/show_bug.cgi?id=30733
+
+        * Scripts/modules/committers.py:
+
 2009-10-23  Eric Seidel  <eric@webkit.org>
 
         No review, only adding Alice to the list of reviewers.
